[package]
name = "h3x"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
quinn = "0.10.2"
rustls = "0.21.7"
rcgen = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
bincode = { version = "2.0.1", features = ["serde"]}
sled = "0.34.7"
uuid = { version = "1.17.0", features = ["serde"]}
