[[bin]]
name = "inject_event"
path = "src/bin/inject_event.rs"

[package]
name = "h3x"
version = "0.1.0"
edition = "2024"
default-run = "h3x"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
quinn = "0.10.2"
rustls = "0.21.7"
rcgen = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sled = "0.34.7"
uuid = { version = "1.17.0", features = ["serde", "v4"]}
dotenv = "0.15.0"
anyhow = "1.0.98"
tokio-util = "0.7.16"
chrono = "0.4.41"
prost-types = "0.14.1"
prost = "0.14.1"
bytes = "1.10.1"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

